--- a/write.html
+++ b/write.html
@@ -21,12 +21,28 @@ body { margin: 0; padding: 0; background-color: black; color: white; font-family
 .delete-icon { position: absolute; top: 10px; right: 10px; display: none; cursor: pointer; font-size: 20px; color: #bbb; }
 .story-card:hover .delete-icon { display: inline; }
 #overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.9); justify-content: center; align-items: center; z-index: 1000; flex-direction: column; }
-#editor { background: #333; padding: 40px; border-radius: 16px; width: 80%; max-width: 900px; }
+#editor {
+  height: 600px;
+  overflow-y: auto; background: #333; padding: 40px; border-radius: 16px; width: 80%; max-width: 900px; }
 #editor input { width: 95%; margin: 15px 0; padding: 20px; border: 1px solid #555; border-radius: 10px; background-color: #333; color: white; font-size: 20px; }
 #editor #toolbar { margin-bottom: 10px; }
 #editor button.toolbar-btn, #editor select { padding: 8px 12px; margin: 0 2px; background-color: grey; border: none; color: white; border-radius: 6px; cursor: pointer; font-size: 16px; }
 #editor button.toolbar-btn:hover, #editor button.toolbar-btn.active { background-color: #ff8800; }
-#storyContent { width: 95%; min-height: 400px; padding: 20px; border: 1px solid #555; border-radius: 10px; background-color: #333; color: white; overflow-y: auto; font-size: 20px; }
+#storyContent {
+  max-height: 400px;
+  resize: none;
+  width: 95%;
+  min-height: 400px;
+  padding: 20px;
+  border: 1px solid #555;
+  border-radius: 10px;
+  background-color: #333;
+  color: white;
+  overflow-y: auto;
+  font-size: 20px;
+  scroll-padding-bottom: 100px;
+  caret-color: white;
+}
 #closeOverlay { position: absolute; top: 20px; right: 30px; font-size: 40px; cursor: pointer; color: white; }
 #chapterControls { text-align: center; margin-top: 20px; }
 #chapterControls button, #chapterControls select { padding: 8px 12px; margin: 5px; background-color: grey; color: white; border: none; border-radius: 6px; font-size: 16px; }
