--- a/home.html
+++ b/home.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
   <style>
-    /* Basic page styling */
     body {
       margin: 0;
       font-family: Arial, sans-serif;
@@ -13,7 +12,6 @@
       color: white;
     }
 
-    /* Sidebar initial styling (hidden by default) */
     .sidebar {
       height: 100%;
       width: 0;
@@ -28,7 +26,6 @@
       flex-direction: column;
     }
 
-    /* Sidebar link styles */
     .sidebar a {
       padding: 10px 15px;
       text-decoration: none;
@@ -38,19 +35,16 @@
       transition: 0.3s;
     }
 
-    /* Hover effect for sidebar links */
     .sidebar a:hover {
       background-color: #575757;
     }
 
-    /* Menu icon styling */
     .menu-icon {
       font-size: 30px;
       cursor: pointer;
       padding: 15px;
     }
 
-    /* Position login button at top-right */
     .top-right {
       position: absolute;
       top: 0;
@@ -58,7 +52,6 @@
       padding: 15px;
     }
 
-    /* Login button styling */
     .login-button {
       background-color: gray;
       color: white;
@@ -68,83 +61,114 @@
       cursor: pointer;
     }
 
-    /* Centered greeting text styling */
     .greeting {
       text-align: center;
       font-size: 24px;
       padding: 20px;
     }
+
+    #secretBtn {
+      display: block;
+      position: absolute;
+      top: 80%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: black;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      font-size: 18px;
+      pointer-events: none;
+      opacity: 0;
+      transition: opacity 0.3s, background-color 0.3s;
+    }
+
+    #secretBtn.active {
+      pointer-events: auto;
+    }
+
+    #secretBtn.active:hover,
+    #secretBtn.revealed {
+      opacity: 1;
+      background-color: #222;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
 
-  <!-- Menu icon to open the sidebar -->
   <div class="menu-icon" onclick="openSidebar()">
     &#9776;
   </div>
 
-  <!-- Sidebar with navigation links -->
   <div class="sidebar" id="mySidebar">
     <a href="javascript:void(0)" onclick="closeSidebar()">&times; Close</a>
     <a href="chat.html">Chat</a>
     <a href="about.html">About</a>
     <a href="stories.html">Stories</a>
-    <a href="write.html">Create</a> <!-- Moved Create link under others -->
+    <a href="write.html">Create</a>
   </div>
 
-  <!-- Login/Logout button on the top-right -->
   <div class="top-right">
     <a id="loginBtn" href="login.html" class="login-button">Login</a>
   </div>
 
-  <!-- Greeting message -->
   <div class="greeting" id="greeting">
     Welcome Guest
   </div>
 
+  <button id="secretBtn" onclick="location.href='secret.html'">Secret</button>
+
   <script>
-    // Function to open the sidebar by setting its width
     function openSidebar() {
       document.getElementById("mySidebar").style.width = "250px";
     }
 
-    // Function to close the sidebar by resetting its width
     function closeSidebar() {
       document.getElementById("mySidebar").style.width = "0";
     }
 
-    // Function to get the value of a specific cookie by name
     function getCookie(name) {
       const value = `; ${document.cookie}`;
       const parts = value.split(`; ${name}=`);
       if (parts.length === 2) return parts.pop().split(';').shift();
     }
 
-    // Function to delete a specific cookie by setting its expiration date to the past
     function deleteCookie(name) {
       document.cookie = name + '=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;';
     }
 
-    // Get references to important elements
     const username = getCookie("username");
     const greeting = document.getElementById("greeting");
     const loginBtn = document.getElementById("loginBtn");
 
-    // Check if a username cookie exists
     if (username) {
-      // Update greeting to show the username
       greeting.textContent = `Hello ${username}`;
-
-      // Change login button to a logout button
       loginBtn.textContent = "Logout";
       loginBtn.href = "#";
-
-      // When clicked, delete the username cookie and reload the page
       loginBtn.onclick = function() {
         deleteCookie("username");
         location.reload();
       };
     }
+
+    let keyBuffer = "";
+    const secretBtn = document.getElementById("secretBtn");
+
+    document.addEventListener("keydown", function(e) {
+      keyBuffer += e.key.toLowerCase();
+      if (keyBuffer.length > 10) keyBuffer = keyBuffer.slice(-10);
+
+      if (keyBuffer.endsWith("unlock")) {
+        secretBtn.classList.add("active");
+        alert("Secret unlocked. Hover to find it.");
+      }
+      if (keyBuffer.endsWith("reveal")) {
+        secretBtn.classList.add("revealed");
+        alert("Secret fully revealed!");
+      }
+    });
   </script>
 
 </body>
