--- a/secret.html
+++ b/secret.html
@@ -149,9 +149,24 @@
   <div id="video" class="hidden">
     <h2>video/</h2>
     <div class="cards-container">
-      <div class="card">arrow shot.MP4</div>
-      <div class="card">v0f044gc0000cmt2mn7og65pj89e9igg.MP4</div>
-      <div class="card">06a3a0a50f81406d9427d787e73f3f57.MP4</div>
+      <div class="card">
+  <video width="100%" controls>
+    <source src="library/arrow shot.MP4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</div>
+      <div class="card">
+  <video width="100%" controls>
+    <source src="library/v0f044gc0000cmt2mn7og65pj89e9igg.MP4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</div>
+      <div class="card">
+  <video width="100%" controls>
+    <source src="library/06a3a0a50f81406d9427d787e73f3f57.MP4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</div>
       <div class="card">Placeholder for video: &lt;file path here&gt;</div>
       <div class="card">Placeholder for video: &lt;file path here&gt;</div>
       <div class="card">Placeholder for video: &lt;file path here&gt;</div>
