--- a/secret.html
+++ b/secret.html
@@ -91,11 +91,22 @@
     <div class="folder" onclick="showSection('ausioi')">📁 ausioi</div>
     <div class="folder" onclick="showSection('video')">📁 video</div>
   </div>
-
-  <div id="pictures" class="hidden">
-    <h2>pictures/</h2>
-    <div class="cards-container">
-      <div class="card">Placeholder for image: &lt;file path here&gt;</div>
+      <div class="card">
+        <img src="library/C81D1942-5303-4AB3-94DE-AD739F26A37F.jpeg" style="width: 100px; cursor: pointer;" onclick="expandImage(this.src)" />
+      </div>
+      <div class="card">
+        <img src="library/CEB08C27-E679-4F8D-A813-C0CFAA3104AA.jpeg" style="width: 100px; cursor: pointer;" onclick="expandImage(this.src)" />
+      </div>
+      <div class="card">
+        <img src="library/972BF888-2876-4FBC-B55B-2EDA1C535888.jpeg" style="width: 100px; cursor: pointer;" onclick="expandImage(this.src)" />
+      </div>
+      <div class="card">
+        <img src="library/D2482BF3-05B3-4114-9C68-04742F31BF4B.png" style="width: 100px; cursor: pointer;" onclick="expandImage(this.src)" />
+      </div>
+      <div class="card">
+        <img src="library/3FA10608-CA0C-4902-9267-274F538FC21E.png" style="width: 100px; cursor: pointer;" onclick="expandImage(this.src)" />
+      </div>
+      
       <div class="card">Placeholder for image: &lt;file path here&gt;</div>
       <div class="card">Placeholder for image: &lt;file path here&gt;</div>
       <div class="card">Placeholder for image: &lt;file path here&gt;</div>
@@ -226,6 +237,19 @@
       ['pictures', 'ausioi', 'video'].forEach(sec => {
         document.getElementById(sec).classList.add('hidden');
       });
+    }
+  </script>
+  <div id="lightbox" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.9); justify-content:center; align-items:center; z-index:9999;">
+    <img id="lightbox-img" src="" style="max-width:90vw; max-height:90vh;" onclick="closeLightbox()">
+  </div>
+
+  <script>
+    function expandImage(src) {
+      document.getElementById('lightbox-img').src = src;
+      document.getElementById('lightbox').style.display = 'flex';
+    }
+    function closeLightbox() {
+      document.getElementById('lightbox').style.display = 'none';
     }
   </script>
 </body>
