--- a/secret.html
+++ b/secret.html
@@ -91,41 +91,7 @@
     <div class="folder" onclick="showSection('ausioi')">📁 ausioi</div>
     <div class="folder" onclick="showSection('video')">📁 video</div>
   </div>
-      <div class="card">
-        <img src="library/C81D1942-5303-4AB3-94DE-AD739F26A37F.jpeg" style="width: 100px; cursor: pointer;" onclick="expandImage(this.src)" />
-      </div>
-      <div class="card">
-        <img src="library/CEB08C27-E679-4F8D-A813-C0CFAA3104AA.jpeg" style="width: 100px; cursor: pointer;" onclick="expandImage(this.src)" />
-      </div>
-      <div class="card">
-        <img src="library/972BF888-2876-4FBC-B55B-2EDA1C535888.jpeg" style="width: 100px; cursor: pointer;" onclick="expandImage(this.src)" />
-      </div>
-      <div class="card">
-        <img src="library/D2482BF3-05B3-4114-9C68-04742F31BF4B.png" style="width: 100px; cursor: pointer;" onclick="expandImage(this.src)" />
-      </div>
-      <div class="card">
-        <img src="library/3FA10608-CA0C-4902-9267-274F538FC21E.png" style="width: 100px; cursor: pointer;" onclick="expandImage(this.src)" />
-      </div>
-      
-      <div class="card">Placeholder for image: &lt;file path here&gt;</div>
-      <div class="card">Placeholder for image: &lt;file path here&gt;</div>
-      <div class="card">Placeholder for image: &lt;file path here&gt;</div>
-      <div class="card">Placeholder for image: &lt;file path here&gt;</div>
-      <div class="card">Placeholder for image: &lt;file path here&gt;</div>
-      <div class="card">Placeholder for image: &lt;file path here&gt;</div>
-      <div class="card">Placeholder for image: &lt;file path here&gt;</div>
-      <div class="card">Placeholder for image: &lt;file path here&gt;</div>
-      <div class="card">Placeholder for image: &lt;file path here&gt;</div>
-      <div class="card">Placeholder for image: &lt;file path here&gt;</div>
-      <div class="card">Placeholder for image: &lt;file path here&gt;</div>
-      <div class="card">Placeholder for image: &lt;file path here&gt;</div>
-      <div class="card">Placeholder for image: &lt;file path here&gt;</div>
-      <div class="card">Placeholder for image: &lt;file path here&gt;</div>
-      <div class="card">Placeholder for image: &lt;file path here&gt;</div>
-      <div class="card">Placeholder for image: &lt;file path here&gt;</div>
-      <div class="card">Placeholder for image: &lt;file path here&gt;</div>
-      <div class="card">Placeholder for image: &lt;file path here&gt;</div>
-      <div class="card">Placeholder for image: &lt;file path here&gt;</div>
+
     </div>
     <div class="back-folders" onclick="goBack()">← back to folders</div>
   </div>
@@ -157,7 +123,29 @@
     <div class="back-folders" onclick="goBack()">← back to folders</div>
   </div>
 
-  <div id="video" class="hidden">
+  <div id="pictures" class="hidden">
+  <h2>pictures/</h2>
+  <div class="cards-container">
+    <div class="card">
+      <img src="library/C81D1942-5303-4AB3-94DE-AD739F26A37F.jpeg" style="width: 100px; cursor: pointer;" onclick="expandImage(this.src)" />
+    </div>
+    <div class="card">
+      <img src="library/CEB08C27-E679-4F8D-A813-C0CFAA3104AA.jpeg" style="width: 100px; cursor: pointer;" onclick="expandImage(this.src)" />
+    </div>
+    <div class="card">
+      <img src="library/972BF888-2876-4FBC-B55B-2EDA1C535888.jpeg" style="width: 100px; cursor: pointer;" onclick="expandImage(this.src)" />
+    </div>
+    <div class="card">
+      <img src="library/D2482BF3-05B3-4114-9C68-04742F31BF4B.png" style="width: 100px; cursor: pointer;" onclick="expandImage(this.src)" />
+    </div>
+    <div class="card">
+      <img src="library/3FA10608-CA0C-4902-9267-274F538FC21E.png" style="width: 100px; cursor: pointer;" onclick="expandImage(this.src)" />
+    </div>
+  </div>
+  <div class="back-folders" onclick="goBack()">← back to folders</div>
+</div>
+
+<div id="video" class="hidden">
     <h2>video/</h2>
     <div class="cards-container">
       <div class="card">
